[package]

name = "oxiunify"

version = "0.1.1"

authors = ["oxiunify <66804416+oxiunify@users.noreply.github.com>"]

edition = "2018"

description = "In development, not production-ready yet. Exploring more futures primitives. Rust guidelines for webapps pursuing the safety of Rust, the minimalism of Go, the performance of C++, and the utility of JavaScript and Python. Always has been and always will be 100% CC0-licensed ('public domain'), no attribution required."

readme = "README.md"

homepage = "https://github.com/oxiunify/oxiunify"

repository = "https://github.com/oxiunify/oxiunify"

license = "CC0-1.0"

[dependencies]
